- Fixed bug #54329 (MSSql extension memory leak)   patch by: dotslashpok at gmail dot com